--- a/retro/templates/forum.html
+++ b/retro/templates/forum.html
@@ -201,18 +201,18 @@
                                 <div class="ibox float-e-margins">
                                     <div class="ibox-title" style="width: 100%;height: 40px;">
                                       <h5 style="padding-left: 20px;">Sección {{ SectionNRC }} - Hilos de Discusión</h5>
-                                      <button id="orderbtn" type="button" class="btn btn-xs pull-right" value="None" onclick="orderAnswers()">Ordenar por Calificación</button>
+                                      <button id="orderbtn" type="button" class="btn btn-outline btn-xs btn-primary pull-right" value="None" onclick="orderThreads()">Ordenar por Calificación</button>
                                         <br>
                                     </div>
                                     <div class="ibox-content">
-                                            <div id="feedAnswers" class="feed-activity-list">
+                                            <div id="feedThreads" class="feed-activity-list">
                                                 {% for x,y in Threads %}
-                                                <div id="Answer_{{x.pk}}" class="feed-element" align="left">
+                                                <div id="Thread_{{x.pk}}" class="feed-element" align="left">
                                                   <small class="pull-left">{{x.publish_date}}</small>
                                                     <div class="media-body ">
                                                         <h3 style="padding-left: 20px;">{{x.name}}</h3>
                                                     </div>
-                                                    <button id="ratingNumber_{{forloop.counter}}" class="ratingNumber" onclick="rateAnswer(this.id,'ratingStars_{{forloop.counter}}')" style="display: inline;"><b id="ratingNumberTxt__{{forloop.counter}}" style="font-size: 18px; color: gold;">☆ {{y}}</b></button>
+                                                    <button id="ratingNumber_{{forloop.counter}}" class="ratingNumber" onclick="rateThread(this.id,'ratingStars_{{forloop.counter}}')" style="display: inline;"><b id="ratingNumberTxt__{{forloop.counter}}" style="font-size: 18px; color: gold;">☆ {{y}}</b></button>
                                                     <small id="ratingStars_{{forloop.counter}}" class="rating" style="display: none; font-size: 150%;">
                                                       <span id="rating5_{{forloop.counter}}" onclick="postRating({{x.pk}},'ratingNumber_{{forloop.counter}}','ratingStars_{{forloop.counter}}','ratingNumberTxt__{{forloop.counter}}',this.id)">☆</span>
                                                       <span id="rating4_{{forloop.counter}}" onclick="postRating({{x.pk}},'ratingNumber_{{forloop.counter}}','ratingStars_{{forloop.counter}}','ratingNumberTxt__{{forloop.counter}}',this.id)">☆</span>
@@ -285,7 +285,7 @@
     </script>
 
     <script>
-    	function orderAnswers() {
+    	function orderThreads() {
     	   var btn = document.getElementById("orderbtn");
          var sortOrder = ""
          if (btn.value == "None") {
@@ -311,19 +311,19 @@
              csrfmiddlewaretoken : getCookie('csrftoken'),
            },
            success : function(data){
-             var answerFeed = document.getElementById("feedAnswers");
+             var threadFeed = document.getElementById("feedThreads");
              for (x in data){
-              var answer = document.getElementById("Answer_"+x);
-              if(answer != null){
-                answerFeed.removeChild(answer);
+              var thread = document.getElementById("Thread_"+x);
+              if(thread != null){
+                threadFeed.removeChild(thread);
               }
-            answerFeed.innerHTML+=
-            '<div id="Answer_'+data[x]['pk']+'" class="feed-element" align="left">'+
+            threadFeed.innerHTML+=
+            '<div id="Thread_'+data[x]['pk']+'" class="feed-element" align="left">'+
               '<small class="pull-left">'+data[x]['publish_date']+'</small>'+
                 '<div class="media-body ">'+
                     '<h3 style="padding-left: 20px;">'+data[x]['name']+'</h3>'+
                 '</div>'+
-                '<button id="ratingNumber_'+x+'" class="ratingNumber"'+'onclick="rateAnswer(this.id,&#39ratingStars_'+x+'&#39)"style="display: inline;"><b id="ratingNumberTxt_'+x+'" style="font-size: 18px; color: gold;">☆ '+data[x]['rating']+'</b></button>'+
+                '<button id="ratingNumber_'+x+'" class="ratingNumber"'+'onclick="rateThread(this.id,&#39ratingStars_'+x+'&#39)"style="display: inline;"><b id="ratingNumberTxt_'+x+'" style="font-size: 18px; color: gold;">☆ '+data[x]['rating']+'</b></button>'+
                 '<small id="ratingStars_'+x+'" class="rating" style="display: none; font-size: 150%;">'+
                   '<span id="rating5_'+x+'",this.id)" onclick="postRating('+data[x]['pk']+',&#39ratingNumber_'+x+'&#39,&#39ratingStars_'+x+'&#39,&#39ratingNumberTxt_'+x+'&#39,this.id)">☆</span>'+
                   '<span id="rating4_'+x+'",this.id)" onclick="postRating('+data[x]['pk']+',&#39ratingNumber_'+x+'&#39,&#39ratingStars_'+x+'&#39,&#39ratingNumberTxt_'+x+'&#39,this.id)">☆</span>'+
@@ -339,7 +339,7 @@
   	</script>
 
 	<script>
-  	function rateAnswer(idRatingNumber,idRatingStar) {
+  	function rateThread(idRatingNumber,idRatingStar) {
   	   var x = document.getElementById(idRatingNumber);
        var y = document.getElementById(idRatingStar);
        if (y.style.display === "none") {
