--- a/auditorias/templates/auditorias/auditorias.html
+++ b/auditorias/templates/auditorias/auditorias.html
@@ -19,7 +19,7 @@
     <div id="wrapper">
     <nav class="navbar-default navbar-static-side" role="navigation">
         <div class="sidebar-collapse">
-            {% include "partials/_sidebar2.html" %}
+            {% include "partials/_sidebar.html" %}
         </div>
     </nav>
         <div id="page-wrapper" class="gray-bg">
