agregado ultimos cambios

--- a/minutas/templates/minutas/_minutas.html
+++ b/minutas/templates/minutas/_minutas.html
@@ -47,11 +47,13 @@
             {{form.document.errors}}
         </div>
 
-        
+        {{HOla}}
         <button type="submit" class="btn btn-primary btn-block py-2">Subir Minuta</button>
 
     </form> 
-
+    {% for i in alertas %}
+    probando usuario {{i.user.user}} cambio minuta {{i.minutes.thematic}}<br>
+    {% endfor %}
 {% endblock content %}
 
 
