--- a/templates/base.html
+++ b/templates/base.html
@@ -44,14 +44,17 @@
                 </li>
                 <li class="dropdown" id="notifications">
                     <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
-                        <i class="fa fa-bell"></i>  <span class="label label-primary" ></span>
+                        <i class="fa fa-bell"></i>  <span class="label label-primary" >jhghg</span>
                     </a>
                     <ul class="dropdown-menu dropdown-alerts">
                         <li>
                             <a href="#">
                                 <div>
+                                {% for i in minuta %}
                                     <i class="fa fa-envelope fa-fw"></i>
+                                    <span class="text-muted ">{{i}}</span>
                                     <span class="pull-right text-muted small">4 minutes ago</span>
+                                {% endfor %}
                                 </div>
                             </a>
                         </li>
