--- a/retro/templates/post_details.html
+++ b/retro/templates/post_details.html
@@ -56,22 +56,35 @@
                 <small class="pull-left">Ayer 5:20 pm - 12.06.2018</small>
                 <br>
                 <div class="ibox-tools">
-                    <span class="label label-info pull-left">{{post.comment_set.all.count}} Respuestas</span>
-                    <h5 style="padding-left: 20px;">Pregunta: {{ post.title }}</h5>
-
-                    <a href="profile.html" class="pull-right">
-                        <img alt="image" class="img-circle" src="{% static 'img/a5.jpg' %}" style="width: 38px;height: 38px;">
-                    </a>
-                    <small class="pull-right"> <b>Francisca Ramirez</b></small>
+                    <div id="title_edit" style="display:none">
+                        <div class="form-group">
+                            <label for="exampleInputEmail2" class="sr-only">Titulo de Pregunta:</label>
+                            <input type="text" placeholder="Ingrese titulo de la pregunta..." id="titulo_pregunta" class="form-control" value="{{post.title}}">
+                        </div>
+                    </div>
+                    <div id="title">
+                        <span class="label label-info pull-left">{{post.comment_set.all.count}} Respuestas</span>
+                        <h5 style="padding-left: 20px;" id="post_title">Pregunta: {{ post.title }}</h5>
+                        <a href="profile.html" class="pull-right">
+                            <img alt="image" class="img-circle" src="{% static 'img/a5.jpg' %}" style="width: 38px;height: 38px;">
+                        </a>
+                        <small class="pull-right"> <b>{{post.author}}</b></small>
+                    </div>
                 </div>
             </div>
             <div class="ibox-content col-md-12">
-                <p>{{ post.description }}</p>
+                <p id="post_description">{{ post.description|safe }}</p>
+                <div id="post_edit" style="display:none">
+                    <div class="summernote form-control" id="summernote_post">{{ post.description }}</div>
+                </div>
                 {% if post.author == request.user.userprofile %}
                 <div class="row">
                     <div class="pull-right col-md-2 col-sm-2 col-lg-2">
                         <button class="pull-right btn btn-warning btn-circle" type="button" data-toggle="tooltip"
-                            data-placement="top" title="" data-original-title="Editar"><i class="fa fa-pencil"></i>
+                            data-placement="top" title="" data-original-title="Editar" id="editar_pregunta"><i class="fa fa-pencil"></i>
+                        </button>
+                        <button class="pull-right btn btn-info btn-circle" type="button" data-toggle="tooltip"
+                            data-placement="top" title="" data-original-title="Aceptar" id="aceptar_cambio" style="display:none"><i class="fa fa-check"></i>
                         </button>
                     </div>
                 </div>
@@ -94,7 +107,7 @@
                                         <div class="well" id="description{{x.pk}}">{{x.description|safe}}</div>
                                         <div id="edit_field{{x.pk}}" style="display:none">
                                             <div placeholder="Escriba su comentario" class="form-control summernote" type="text"
-                                                id="summernote" name="description">{{x.description|safe}}</div>
+                                                id="summernote{{x.pk}}" name="description">{{x.description|safe}}</div>
                                         </div>
                                         <div style="padding-top: 2px; padding-bottom: 2px;">
 
@@ -109,12 +122,8 @@
                                                     {% endif %}
                                                 </span>
                                             </a>
-
                                             {% endif %}
-
-
                                         </div>
-
                                     </div>
                                 </div>
                                 <div class="col-lg-12 col-md-12 col-sm-12">
@@ -314,21 +323,22 @@
             var pk = $(this).data("pk");
             let data = {
                 csrfmiddlewaretoken: getCookie('csrftoken'),
-				pk: pk,
-				comment:$('#summernote'+pk).summernote('code'),
+                pk: pk,
+                comment:$('#summernote'+pk).summernote('code'),
             };
+            console.log(data)
             $.ajax({
                 url: '{% url "update_comment" %}',
                 type: "POST",
                 data: data,
-                success: function (data) {
-                    if (data.message == "ok") {
-						$("#description"+pk).html(data.text);
+                success: function (response) {
+                    if (response.message == "ok") {
+                        console.log("Entre al if");
+						$("#description"+pk).html(response.text);
 						$("#edit_field"+pk).hide();
 						$("#description"+pk).show();
 						$("#editar"+pk).show();
 						$("#aceptar"+pk).hide();
-						location.reload();
                     }
                 }
             });
@@ -340,6 +350,41 @@
 			$("#editar"+pk).hide();
 			$("#aceptar"+pk).show();
 			
+        });
+        $("#editar_pregunta").click(function () {
+            $("#title_edit").show();
+            $("#title").hide();
+            $("#aceptar_cambio").show();
+            $("#editar_pregunta").hide();
+            $("#post_edit").show();
+            $("#post_description").hide();
+        });
+        $("#aceptar_cambio").click(function () {
+            let data = {
+                csrfmiddlewaretoken: getCookie('csrftoken'),
+                pk: "{{post.pk}}",
+                title: $("#titulo_pregunta").val(),
+                comment:$('#summernote_post').summernote('code'),
+            };
+            console.log(data)
+            $.ajax({
+                url: '{% url "update_post" %}',
+                type: "POST",
+                data: data,
+                success: function (response) {
+                    if (response.message == "ok") {
+                        console.log("Entre al if");
+						$("#post_description").html(response.text);
+						$("#post_title").html(response.title);
+						$("#title_edit").hide();
+                        $("#title").show();
+                        $("#aceptar_cambio").hide();
+                        $("#editar_pregunta").show();
+                        $("#post_edit").hide();
+                        $("#post_description").show();
+                    }
+                }
+            });
         });
     });
 </script>
