--- a/auditorias/templates/auditorias/edit_umbral.html
+++ b/auditorias/templates/auditorias/edit_umbral.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load bootstrap4 %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -38,7 +39,7 @@
                     <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
                         <i class="fa fa-envelope"></i>
                     </a>
-                    
+
                     <ul class="dropdown-menu dropdown-messages">
                     </ul>
                 </li>
@@ -80,13 +81,13 @@
                             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
                                 <h1 class = 'text-center' style="margin-top:30px;"></h1>
                                 <form action="" method="POST" enctype="multipart/form-data">{% csrf_token %}
-                                    <h1>Cambiar umbral</h1>
-                                    {{ form }}
+                                    <h1>Editar umbral</h1>
+                                    {% bootstrap_form form %}
                                     <input type="submit" value="Enviar" class="btn btn-primary btn-lg btn-block">
                                 </form>
                                 <br>
                             </div>
-                        
+
                         </div>
                     </div>
                 </div>
@@ -147,7 +148,9 @@
     <!-- <script src="{% static 'js/demo/sparkline-demo.js' %}"></script> -->
 
     {% block javascript %}
+    <script>
 
+    </script>
     {% endblock javascript %}
 
 </body>
