--- a/retro/templates/post_details.html
+++ b/retro/templates/post_details.html
@@ -90,27 +90,30 @@
                                         <small class="pull-right" style=""> <b>{{x.author.user.first_name}}
                                                 {{x.author.user.last_name}}</b></small><br>
                                         <div class="well" id="description{{x.pk}}">{{x.description|safe}}</div>
-                                        <div id="edit_field{{x.pk}}" style="display:none">
-                                            <div placeholder="Escriba su comentario" class="form-control summernote" type="text"
-                                                id="summernote" name="description">{{x.description|safe}}</div>
-                                        </div>
                                         <div style="padding-top: 2px; padding-bottom: 2px;">
 
                                             {% if z != "" %}
-                                            <a href="{% get_media_prefix %}{{z.document}}" title="Imagen" data-gallery>
+                                                <a href="{% get_media_prefix %}{{z.document}}" title="Imagen" download="{{z.document}}" >
                                                 <span>
                                                     <img src="{% get_media_prefix %}{{z.document}}" onclick="this.width=500;this.height=500;"
-                                                        onmouseout="this.width=50;this.height=50;" width="50" height="50"
-                                                        alt="" />
-                                                    {% if x.author.user == request.user %}
-                                                        <a class="imagen" data-pk="{{z.pk}}">Eliminar</a>
-                                                    {% endif %}
+                                                         onmouseout="this.width=50;this.height=50;" width="50" height="50"
+                                                         alt="Archivo" />
                                                 </span>
-                                            </a>
+                                                </a>
+                                                <div>
+                                                {% if x.author.user == request.user %}
+                                                    <a class="imagen" data-pk="{{z.pk}}">Eliminar</a>
+                                                {% endif %}
+                                                </div>
+
 
                                             {% endif %}
 
 
+                                        </div>
+                                        <div id="edit_field{{x.pk}}" style="display:none">
+                                            <div placeholder="Escriba su comentario" class="form-control summernote" type="text"
+                                                id="summernote" name="description">{{x.description|safe}}</div>
                                         </div>
 
                                     </div>
