--- a/retro/templates/post_details.html
+++ b/retro/templates/post_details.html
@@ -269,8 +269,8 @@
           height: 100,
       });
 
-        $("#imagen").click(function () {
-            alert("aqui")
+        $(".imagen").click(function () {
+            
             var pk = $(this).data("pk");
             $.ajax({
                 url: '{% url "delete_imag" %}',
