--- a/retro/templates/post_details.html
+++ b/retro/templates/post_details.html
@@ -65,9 +65,13 @@
                         <span class="label label-info pull-left">{{post.comment_set.all.count}} Respuestas</span>
                         <h5 style="padding-left: 20px;" id="post_title">Pregunta: {{ post.title }}</h5>
                         <a href="profile.html" class="pull-right">
-                            <img alt="image" class="img-circle" src="{% static 'img/a5.jpg' %}" style="width: 38px;height: 38px;">
+                            <img alt="image" class="img-circle" src="{% static 'img/default_user.png' %}" style="width: 38px;height: 38px;">
                         </a>
-                        <small class="pull-right"> <b>{{post.author}}</b></small>
+                        <small class="pull-right">
+                          <b>
+                            {{post.author.user.first_name}} {{post.author.user.last_name}} - Umbral de respuesta del Profesor {{ post.thread.section.teacher.umbral }}
+                          </b>
+                        </small>
                     </div>
                 </div>
             </div>
@@ -98,7 +102,7 @@
                                 <div class="col-lg-12 col-md-12 col-sm-12">
                                     <small class="pull-left">{{x.publish_date}}</small>
                                     <a href="profile.html" class="pull-right">
-                                        <img alt="image" class="img-circle" src="{% static 'img/a1.jpg' %}">
+                                        <img alt="image" class="img-circle" src="{% static 'img/default_user.png' %}">
                                     </a>
                                     <div class="media-body ">
                                         <small class="pull-right" style=""> <b>{{x.author.user.first_name}}
@@ -372,7 +376,7 @@
                     if (response.message == "ok") {
                         console.log("Entre al if");
 						$("#post_description").html(response.text);
-						$("#post_title").html(response.title);
+						$("#post_title").html("Pregunta: "+ response.title);
 						$("#title_edit").hide();
                         $("#title").show();
                         $("#aceptar_cambio").hide();
