--- a/retro/templates/section_details.html
+++ b/retro/templates/section_details.html
@@ -136,21 +136,23 @@
       <div id="commentaries" {% if searchFilter == '' %} style="display: none"{% endif %}>
         <div class="col-lg-12 animated fadeInRight">
           <div class="wrapper wrapper-content">
-          {% if request|PrivilegeCreateThread:section.pk %}
+          {% with request|PrivilegeCreateThread:section.pk as crearHilo %}
             <div class="col-md-12">
               <form action="{% url 'section_details' section.pk %}" class="form-horizontal" method="get">
                 <div class="form-group col-md-8">
                   <input type="text" name="search" id="id_search" class="form-control" placeholder="Buscar..." value="{{searchFilter|cut:'&search='}}">
                 </div>
-                <div class="col-md-2">
+                <div class="{% if crearHilo %}col-md-2{% else %}col-md-4{% endif %}">
                   <button type="submit" class="btn btn-success btn-block"><i class="fa fa-search"></i> Buscar</button>
                 </div>
+                {% if crearHilo %}
                 <div class="col-md-2">
                   <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#addThread"><i class="fa fa-plus"></i> Crear Hilo</button>
                 </div>
+              {% endif %}
               </form>
             </div>
-          {% endif %}
+          {% endwith %}
             <div class="col-md-12">
               {% for x in threadpage %}
                 <div class="vote-item">
