--- a/retro/templates/thread_details.html
+++ b/retro/templates/thread_details.html
@@ -45,25 +45,29 @@
 <div class="row">
   <div class="col-lg-12 animated fadeInRight">
       <div class="wrapper wrapper-content">
+      {% with request|PrivilegeCreateThread:thread.section.pk as crearHilo %}
 {#            {% if request|PrivilegeCreateThread:section.pk %}#}
         <div class="col-md-12">
           <form action="{% url 'thread_details' thread.pk %}" class="form-horizontal" method="get">
             <div class="form-group col-md-6">
               <input type="text" name="search" id="id_search" class="form-control" placeholder="Buscar..." value="{{searchFilter|cut:'&search='}}">
             </div>
-            <div class="col-md-2">
+            <div class="{% if crearHilo %}col-md-2{% else %}col-md-3{% endif %}">
               <button type="submit" class="btn btn-success btn-block"><i class="fa fa-search"></i> Buscar</button>
             </div>
-            <div class="col-md-2">
+            <div class="{% if crearHilo %}col-md-2{% else %}col-md-3{% endif %}">
               <a href="{% url 'section_details' thread.section.pk %}">
                 <button type="button" class="btn btn-warning btn-block" ><i class="fa fa-arrow-circle-left"></i> Volver</button>
               </a>
             </div>
+            {% if crearHilo %}
             <div class="col-md-2">
               <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#addPost"><i class="fa fa-plus"></i> Crear Pregunta</button>
             </div>
+            {% endif %}
           </form>
         </div>
+        {% endwith %}
 {#            {% endif %}#}
         <div class="col-md-12">
           {% for x in postlist %}
@@ -94,9 +98,11 @@
                             <i class="fa fa-sign-in"> </i>
                         </div>
                     </div>
+                    {% if x.author.user == request.user %}
                     <div class="col-md-offset-9 col-md-3 col-lg-3 ">
                       <a class="btn btn-sm btn-danger pull-right eliminar" data-pk="{{x.pk}}" >Eliminar</a>
-                    </div>  
+                    </div>
+                {% endif %}
                 </div>
             </div>
           {% endfor %}
