--- a/retro/templates/thread_details.html
+++ b/retro/templates/thread_details.html
@@ -71,7 +71,7 @@
 {#            {% endif %}#}
         <div class="col-md-12">
           {% for x in postlist %}
-            <div class="vote-item">
+            <div class="vote-item" data-pk="{{ x.pk }}">
                 <div class="row">
                     <div class="col-md-10">
                         <div class="vote-actions">
@@ -90,7 +90,13 @@
                             <i class="fa fa-question-circle-o"></i> <a href="#">Respuestas ({{ x.comment_set.all.count }})</a>
                             <i class="fa fa-check"></i> <a href="#">Valoraciones ({{ x.postranking_set.all.count }})</a>
                             <i class="fa fa-clock-o"></i> <a href="#">{% with x.getDiference as difference %} {{ difference }} {% if difference == 1 %}Hora{% else %}Horas{% endif %} atrás {% endwith %}</a>
-{#                                <i class="fa fa-user"></i> <a href="#">Andrew Williams</a>#}
+                            <span class="seguirPregunta">
+                              {% if x.pk in follow %}
+                              <i class="fa fa-arrow-right"></i> <a href="#">Seguir la pregunta</a>
+                              {% else %}
+                                <i class="fa fa-times"></i> <a href="#">Dejar de seguir la pregunta</a>
+                              {% endif %}
+                            </span>
                         </div>
                     </div>
                     <div class="col-md-2 ">
@@ -151,6 +157,7 @@
       <div class="modal-content">
         <form action="{% url 'thread_details' thread.pk %}" class="form-horizontal" method="post">
           {% csrf_token %}
+          <input type="text" id="id_action" name="action" value="createPost" class="hidden">
           <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
               <h4 class="modal-title">Crear Pregunta</h4>
@@ -218,9 +225,9 @@
     }
     
     $(document).ready(function(){
-        {% if postparecido == 1 %}
+      {% if postparecido == 1 %}
         $('#mensaje').modal('show');
-         {% endif %}
+      {% endif %}
       $(".eliminar").click(function(){
         var pk = $(this).data("pk");
         let data = {
@@ -236,6 +243,29 @@
                   location.reload();
               }
             }
+        });
+      });
+      $('.seguirPregunta').on('click', function () {
+        let span = $(this);
+        let i = span.find('i');
+        let parent = $(this).parents().eq(3);
+        $.ajax({
+          url:'{% url "thread_details" thread.pk %}',
+          type: "POST",
+          data: {
+            csrfmiddlewaretoken: getCookie('csrftoken'),
+            action: 'followPost',
+            pk: parent.data('pk'),
+          },
+          success: function() {
+            if (i.hasClass('fa-arrow-right')){
+              i.removeClass('fa-arrow-right').addClass('fa-times');
+              span.find('a').text('Degar de seguir la pregunta');
+            }else{
+              i.removeClass('fa-times').addClass('fa-arrow-right');
+              span.find('a').text('Seguir la pregunta');
+            }
+          }
         });
       });
     });
