--- a/templates/base.html
+++ b/templates/base.html
@@ -43,8 +43,9 @@
                 </li>
                 <li class="dropdown" id="notifications">
                     {% with request|loadAlert as Mensaje %}
+                      {% with Mensaje|length as Total %}
                       <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
-                          <i class="fa fa-bell"></i>  <span class="label label-primary">{{ Mensaje|length }}</span>
+                          <i class="fa fa-bell"></i>  <span class="label label-primary">{% if Total != 0 %}{{ Total }}{% endif %}</span>
                       </a>
                       <ul class="dropdown-menu dropdown-alerts">
                           {% for i in Mensaje %}
@@ -53,7 +54,7 @@
                                   <div>
                                       <i class="fa fa-envelope fa-fw"></i>
                                       <span class="text-muted ">{{i.0|safe}}</span>
-                                      <span class="pull-right text-muted small">4 minutes ago</span>
+                                      <span class="pull-right text-muted small">{{ i.1 }}</span>
 
                                   </div>
                               </a>
@@ -62,6 +63,7 @@
                           <li class="divider"></li>
                           <a id="borrar"><strong class="center-text">Borrar Notificaciones</strong></a>
                       </ul>
+                    {% endwith %}
                     {% endwith %}
                 </li>
                 <li>
