--- a/templates/partials/_sidebar.html
+++ b/templates/partials/_sidebar.html
@@ -19,12 +19,19 @@
         <a href="{% url 'index' %}"><i class="fa fa-home"></i> <span class="nav-label">Inicio</span></a>
     </li>
     <li>
-        <a href="" disabled><i class="fa fa-book "></i> <span class="nav-label">Mis Consultas</span></a>
-    </li>
-    <li>
-        <a href="" disabled><i class="fa fa-book "></i> <span class="nav-label">Mis Asignaturas</span></a>
-    </li>
-    <li>
-        <a href="{% url 'alerta' %}" disabled><i class="fa-fa-book "></i> <span class="nav-label">Generar alerta</span></a>
-    </li>
+      <a href="#"><i class="fa fa-bar-chart-o"></i> <span class="nav-label">Auditorías</span><span class="fa arrow"></span></a>
+      <ul class="nav nav-second-level collapse">
+          <li><a href="{% url 'auditorias' %}">Generar</a></li>
+          <li><a href="{% url 'historial_auditorias' %}">Historial</a></li>
+      </ul>
+  </li>
+{#    <li>#}
+{#        <a href="" disabled><i class="fa fa-book "></i> <span class="nav-label">Mis Consultas</span></a>#}
+{#    </li>#}
+{#    <li>#}
+{#        <a href="" disabled><i class="fa fa-book "></i> <span class="nav-label">Mis Asignaturas</span></a>#}
+{#    </li>#}
+{#    <li>#}
+{#        <a href="{% url 'alerta' %}" disabled><i class="fa-fa-book "></i> <span class="nav-label">Generar alerta</span></a>#}
+{#    </li>#}
 </ul>
